--- a/client/index.html
+++ b/client/index.html
@@ -5,22 +5,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	
+
+	<meta property="og:title" content="Memory Game" />
+	<meta property="og:type" content="Mobile and PC Games" />
+	<meta property="og:image" content="client/assets/images/icons/logo.png" />
+	<meta property="og:description" content="A memory game with a twist. Credit also to the game creator and to the owner of images & sounds." />
+		
 	<title>Memory Game</title>
+
+	<link rel="shortcut icon" href="client/assets/images/icons/sv_icon.ico">
+	<link rel="apple-touch-icon" href="client/assets/images/icons/sv_icon.png">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-
-	
-
-	<!-- <script src="/socket.io/socket.io.js"></script>
- -->
 	<script src="client/assets/js/phaser/phaser.min.js"></script>
 
 	<script src="client/assets/js/memory.js"></script>
 
 	<style>
 
-		
 		@import url('https://fonts.googleapis.com/css2?family=Coda:wght@800&family=Poppins&display=swap');
 
 		html, body {
