--- a/client/index.html
+++ b/client/index.html
@@ -21,11 +21,11 @@
 
 	<script src="//cdn.jsdelivr.net/npm/phaser@3.21.0/dist/phaser.min.js"></script>
 
-	<script src="client/assets/js/memory.js"></script>
+	<script src="client/assets/js/main.js"></script>
 
 	<style>
 
-		@import url('https://fonts.googleapis.com/css2?family=Coda:wght@800&family=Poppins&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Coda:wght@800&family=Oswald:wght@700&family=Poppins:wght@300&display=swap');
 
 		html, body {
 
