--- a/client/index.html
+++ b/client/index.html
@@ -5,19 +5,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
+
 
 	<meta property="og:title" content="Solitaire" />
 	<meta property="og:type" content="Mobile and PC Games" />
 	<meta property="og:image" content="client/assets/images/icons/logo.png" />
 	<meta property="og:description" content="Credit also to the game creator and to the owner of images & sounds." />
-		
+
 	<title>Solitaire</title>
 
 	<link rel="shortcut icon" href="client/assets/images/icons/sv_icon.ico">
 	<link rel="apple-touch-icon" href="client/assets/images/icons/sv_icon.png">
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	<script src="client/assets/js/phaser/phaser.min.js"></script>
 
@@ -28,72 +26,32 @@
 		@import url('https://fonts.googleapis.com/css2?family=Coda:wght@800&family=Oswald:wght@700&family=Poppins:wght@300&display=swap');
 
 		html, body {
-
 			padding: 0;
 			margin:0;
 			height: 100%;
 			background: #ccc url('client/assets/images/background_1.jpg') repeat;
 			font-family: Poppins, sans-serif;
-
 		}
-
-		#game_container {
+		#game-container {
 			-webkit-overflow-scrolling: touch;
 			display: flex;
 			width: 100%;
 			height: 100%;
 			max-height: 100%;
-			overflow-y: auto;
-			
-		}
-
-		#game_login {
-
-			width:85%;
-			max-width: 320px;
-			margin: auto;
-			padding : 15px;
-			border : 1px solid #fff;
-			border-radius: 3px;
-			background-color: #f5f5f5;
-			font-size: 16px !important;
+			overflow-y: hidden;
 
 		}
-
-		#game_div {
-
+		#game-div {
 			margin:auto;
 			-webkit-overflow-scrolling: touch;
 		}
 
-		.form-control {
-			border : 1px solid #9a9a9a !important;
-		}
-		
 	</style>
 
 </head>
 <body>
-	<div id="game_container">
-
-		<div id="game_login">
-
-			<form id="myForm">
-
-				<label for=""><strong>Welcome to Solitaire</strong></label>
-
-				<div class="mt-2">
-					<input type="submit" value="Enter" class="btn btn-secondary btn-block" id="btnEnter">
-				</div>
-			
-				<div id="messageDiv" class="text-danger"></div>
-				
-			</form>
-
-		</div>
-
-		<div id="game_div" style="display: none"></div>
-	
+	<div id="game-container">
+		<div id="game-div"></div>
 	</div>
 </body>
 </html>
