--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 	<link rel="apple-touch-icon" href="client/assets/images/icons/sv_icon.png">
 
 	
-	<script src="//cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.min.js"></script>
+	<script src="client/assets/js/phaser/phaser.min.js"></script>
 
 	<script src="client/assets/js/buttons.js"></script>
 
