--- a/client/index.html
+++ b/client/index.html
@@ -14,12 +14,12 @@
 	<title>Solitaire</title>
 
 	<link rel="shortcut icon" href="client/assets/images/icons/sv_icon.ico">
-	
+
 	<link rel="apple-touch-icon" href="client/assets/images/icons/sv_icon.png">
 
 	<script src="client/assets/js/phaser/phaser.min.js"></script>
 
-	<script src="client/assets/js/buttons.js"></script>
+	<!-- <script src="client/assets/js/buttons.js"></script>
 
 	<script src="client/assets/js/card.js"></script>
 
@@ -35,7 +35,7 @@
 
 	<script src="client/assets/js/sceneb.js"></script>
 	
-	<script src="client/assets/js/main.js"></script>
+	<script src="client/assets/js/main.js"></script> -->
 
 
 	<style>
@@ -46,9 +46,13 @@
 
 			padding: 0;
 			margin:0;
-			height: 100%;
 			font-family: Arial, Helvetica, sans-serif;
 			background: #ccc url('client/assets/images/background.jpg') repeat;
+		}
+
+		#game_div {
+			padding : 10px 10px;
+			color : white;
 		}
 
 
@@ -57,7 +61,7 @@
 </head>
 <body>
 
-    <div id="game_div"></div>
+    <div id="game_div" >CHALNICOL</div>
     
 </body>
 </html>
