--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,9 @@
 
 	<script src="client/assets/js/phaser/phaser.min.js"></script>
 
-	<!-- <script src="client/assets/js/buttons.js"></script>
+<!-- 
+	
+	<script src="client/assets/js/buttons.js"></script>
 
 	<script src="client/assets/js/card.js"></script>
 
@@ -29,13 +31,15 @@
 
 	<script src="client/assets/js/homebox.js"></script>
 
-	<script src="client/assets/js/preloader.js"></script>
-
 	<script src="client/assets/js/scenea.js"></script>
 
 	<script src="client/assets/js/sceneb.js"></script>
-	
-	<script src="client/assets/js/main.js"></script> -->
+
+-->
+		
+	<script src="client/assets/js/preloader.js"></script>
+
+	<script src="client/assets/js/main.js"></script> 
 
 
 	<style>
@@ -50,18 +54,13 @@
 			background: #ccc url('client/assets/images/background.jpg') repeat;
 		}
 
-		#game_div {
-			padding : 10px 10px;
-			color : white;
-		}
-
 
 	</style>
 
 </head>
 <body>
 
-    <div id="game_div" >CHALNICOL</div>
+    <div id="game_div" ></div>
     
 </body>
 </html>
