--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
 
 
 	
-	<script src="client/assets/js/buttons.js"></script>
+	<!-- <script src="client/assets/js/buttons.js"></script>
 
 	<script src="client/assets/js/card.js"></script>
 
@@ -29,11 +29,10 @@
 
 	<script src="client/assets/js/fieldbox.js"></script>
 
-	<script src="client/assets/js/homebox.js"></script>
+	<script src="client/assets/js/homebox.js"></script> -->
 
 	<script src="client/assets/js/sceneb.js"></script>
 
-		
 	<script src="client/assets/js/scenea.js"></script>
 
 	<script src="client/assets/js/preloader.js"></script>
