--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
 
 	<script src="client/assets/js/homebox.js"></script> -->
 
-	<script src="client/assets/js/sceneb.js"></script> 
+	<script src="client/assets/js/proper.js"></script> 
 
 	<script src="client/assets/js/scenea.js"></script>
 
