--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
 
 
 	
-	<!-- <script src="client/assets/js/buttons.js"></script>
+	<script src="client/assets/js/buttons.js"></script>
 
 	<script src="client/assets/js/card.js"></script>
 
@@ -29,7 +29,7 @@
 
 	<script src="client/assets/js/fieldbox.js"></script>
 
-	<script src="client/assets/js/homebox.js"></script> -->
+	<script src="client/assets/js/homebox.js"></script>
 
 	<script src="client/assets/js/proper.js"></script> 
 
